contrast error fix

--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ hr {
 }
 
 .cta-sc2 {
-  background-color: #1cab2a;
+  background-color: #409A49;
 }
 
 .cta-o {
